--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,19 +4,24 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 permissions:
   contents: write
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-latest]
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python 3.13
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.13"
@@ -27,25 +32,41 @@ jobs:
           pip install -r requirements.txt
 
       - name: Build with PyInstaller
-        run: |
-          python build.py
+        run: python build.py
 
       - name: Get version from config
         id: get_version
+        shell: bash
         run: |
-          $version = (Get-Content -Raw installer_config.json | ConvertFrom-Json).version
-          echo "VERSION=$version" >> $env:GITHUB_OUTPUT
+          VERSION=$(jq -r .version installer_config.json)
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: LumiInstaller-${{ matrix.os }}
+          path: dist/*
+
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: dist
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: v${{ steps.get_version.outputs.VERSION }}
-          name: v${{ steps.get_version.outputs.VERSION }}
+          tag_name: v${{ needs.build.outputs.VERSION }}
+          name: v${{ needs.build.outputs.VERSION }}
           body: |
             Release built from commit: ${{ github.sha }}
 
             Changes:
             ${{ github.event.head_commit.message }}
-          files: dist/LumiInstaller.exe
+          files: dist/**/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
