--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
 	"dependencies": {
 		"@tauri-apps/api": "^2",
 		"@tauri-apps/plugin-opener": "^2",
+		"@tauri-apps/plugin-os": "^2.3.2",
 		"framer-motion": "^12.23.24",
 		"i18next": "^25.6.2",
 		"i18next-browser-languagedetector": "^8.2.0",
 		"lottie-react": "^2.4.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
-		"react-i18next": "^16.3.3"
+		"react-i18next": "^16.3.3",
+		"react-icons": "^5.5.0"
 	},
 	"devDependencies": {
 		"@tauri-apps/cli": "^2",
