--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-i18next": "^16.3.3",
-		"react-icons": "^5.5.0"
+		"react-icons": "^5.5.0",
+		"react-router-dom": "^7.9.6"
 	},
 	"devDependencies": {
 		"@tauri-apps/cli": "^2",
