--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
 		"@tauri-apps/api": "^2",
 		"@tauri-apps/plugin-opener": "^2",
 		"@tauri-apps/plugin-os": "^2.3.2",
+		"@tauri-apps/plugin-store": "^2.4.1",
 		"framer-motion": "^12.23.24",
 		"i18next": "^25.6.2",
-		"i18next-browser-languagedetector": "^8.2.0",
 		"lottie-react": "^2.4.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
