--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
 	},
 	"dependencies": {
 		"@tauri-apps/api": "^2",
+		"@tauri-apps/plugin-dialog": "^2.4.2",
 		"@tauri-apps/plugin-opener": "^2",
 		"@tauri-apps/plugin-os": "^2.3.2",
 		"@tauri-apps/plugin-store": "^2.4.1",
+		"@types/uuid": "^10.0.0",
 		"framer-motion": "^12.23.24",
 		"i18next": "^25.6.2",
 		"lottie-react": "^2.4.1",
@@ -21,7 +23,8 @@
 		"react-dom": "^19.1.0",
 		"react-i18next": "^16.3.3",
 		"react-icons": "^5.5.0",
-		"react-router-dom": "^7.9.6"
+		"react-router-dom": "^7.9.6",
+		"uuid": "^13.0.0"
 	},
 	"devDependencies": {
 		"@tauri-apps/cli": "^2",
