--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,4 +26,7 @@ tauri-plugin-os = "2"
 once_cell = "1.21.3"
 regex = "1.12.2"
 tauri-plugin-store = "2"
+tauri-plugin-dialog = "2"
+serde_yaml = "0.9.34"
+fs2 = "0.4.3"
 
